src/test/test-models/good/parser-generator/prim_var_gqs.stan
generated quantities {
  int<lower=0, upper=1> p1;
  real p2;
  array[3] int ar_p1;
  array[4] real<lower=0, upper=1> ar_p2;
}

